# timesheet

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: docs_pages.yaml
docs/: conf.py  index.rst
docs/.doctrees/docs/: index.doctree
tests/: test_DayLog.py  test_Timesheet.py  test_command.py
timesheet/: TimeAggregate.py  Timesheet.py  command.py  constants.py  utils.py
timesheet/classes/: TimeAggregate.py  Timesheet.py
timesheet/utils/: constants.py  utils.py
